--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">DynamicForm</string>
-    <string name="title_activity_main">Easynvest</string>
+    <string name="title_activity_main">Investimento</string>
     <string name="action_settings">Settings</string>
     <string name="title_contact">Contato</string>
     <string name="title_investment">Investimento</string>
